<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/about"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/profile_image"
        android:layout_width="@dimen/_40mdp"
        android:layout_height="@dimen/_40mdp"
        android:layout_marginTop="8dp"
        android:background="@drawable/orange_circle"
        android:duplicateParentState="true"
        android:padding="4dp"
        android:src="@drawable/profile"
        app:civ_border_color="#FF000000"
        app:civ_border_width="2dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/username"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/AbuBakar"
        android:textAllCaps="true"
        android:textColor="#000000"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/profile_image"
        app:layout_constraintStart_toEndOf="@+id/profile_image"
        app:layout_constraintTop_toTopOf="@+id/profile_image"
        app:layout_constraintVertical_bias="0.26" />
    <!--        app:layout_constraintVertical_bias="0.195" -->


    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/student"
        app:layout_constraintStart_toStartOf="@+id/username"
        app:layout_constraintTop_toBottomOf="@+id/username" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="18dp"
        android:layout_height="18dp"
        android:layout_marginEnd="8dp"
        android:contentDescription="@string/todo"
        app:layout_constraintBottom_toBottomOf="@+id/profile_image"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/profile_image"
        app:srcCompat="@drawable/ic_more" />


    <com.makeramen.roundedimageview.RoundedImageView
        android:id="@+id/postimage"
        android:layout_width="0dp"
        android:layout_height="@dimen/_150mdp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:alpha="0.9"
        android:scaleType="centerCrop"
        android:src="@drawable/deaf"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/profile_image"
        app:riv_corner_radius="10dip" />

    <ImageView
        android:id="@+id/save"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        app:layout_constraintEnd_toEndOf="@+id/postimage"
        app:layout_constraintTop_toTopOf="@+id/postimage"
        app:srcCompat="@drawable/ic_bookmark"
        android:contentDescription="@string/todo" />

    <TextView
        android:id="@+id/like"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:drawablePadding="10dp"
        android:gravity="center"
        android:text="@string/_354"
        android:drawableLeft="@drawable/ic_like"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/postimage" />


    <TextView
        android:id="@+id/comment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:drawablePadding="16dp"
        android:gravity="center"
        android:text="@string/_54"
        android:drawableLeft="@drawable/ic_chat"
        app:layout_constraintStart_toEndOf="@id/like"
        app:layout_constraintTop_toBottomOf="@+id/postimage" />






    <TextView
        android:id="@+id/sharee"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:drawablePadding="16dp"
        android:gravity="center"
        android:text="@string/_354"
        android:drawableLeft="@drawable/ic_share"
        app:layout_constraintStart_toEndOf="@id/comment"
        app:layout_constraintTop_toBottomOf="@+id/postimage" />







</androidx.constraintlayout.widget.ConstraintLayout>