<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:diagonal="http://schemas.android.com/apk/res-auto"
    tools:context=".Fragment.HomeFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:fontFamily="@font/Bakar"
                android:text="@string/app_name"
                android:textColor="@color/black"
                android:textSize="@dimen/_24mdp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="@id/profile_image"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@id/profile_image" />

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/profile_image"
                android:layout_width="@dimen/_40mdp"
                android:layout_height="@dimen/_40mdp"
                android:layout_marginTop="8dp"
                android:background="@drawable/orange_circle"
                android:duplicateParentState="true"
                android:padding="4dp"
                android:src="@drawable/profile"
                app:civ_border_color="#FF000000"
                app:civ_border_width="2dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />


            <View
                android:id="@+id/view2"
                android:layout_width="wrap_content"
                android:layout_height="1dp"
                android:layout_marginTop="4dp"
                android:background="@android:color/darker_gray"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/profile_image" />

            <HorizontalScrollView
                android:id="@+id/horizontalScrollView"
                android:layout_width="match_parent"
                android:layout_height="match_parent"

                android:fillViewport="true"
                android:scrollbars="none"
                app:layout_constraintEnd_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/view2">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent">

                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content">

                        <com.makeramen.roundedimageview.RoundedImageView
                            android:id="@+id/story"
                            android:layout_width="@dimen/_130mdp"
                            android:layout_height="@dimen/_85mdp"
                            android:layout_marginStart="16dp"
                            android:alpha="0.9"
                            android:scaleType="centerCrop"
                            android:src="@drawable/deaf"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent"
                            app:riv_corner_radius="10dip" />

                        <View
                            android:id="@+id/view4"
                            android:layout_width="0dp"
                            android:layout_height="0dp"
                            android:background="@drawable/black_shade"
                            app:layout_constraintBottom_toBottomOf="@+id/story"
                            app:layout_constraintEnd_toEndOf="@+id/story"
                            app:layout_constraintStart_toStartOf="@+id/story"
                            app:layout_constraintTop_toTopOf="@+id/story" />

                        <View
                            android:id="@+id/view8"
                            android:layout_width="0dp"
                            android:layout_height="0dp"
                            android:layout_marginTop="4dp"
                            android:layout_marginEnd="4dp"
                            android:layout_marginBottom="4dp"
                            android:background="@drawable/circle"
                            android:backgroundTint="@color/white"
                            app:layout_constraintBottom_toBottomOf="@+id/addStory"
                            app:layout_constraintEnd_toEndOf="@+id/addStory"
                            app:layout_constraintStart_toStartOf="@+id/addStory"
                            app:layout_constraintTop_toTopOf="@+id/addStory" />

                        <ImageView
                            android:id="@+id/addStory"
                            android:layout_width="@dimen/_30mdp"
                            android:layout_height="@dimen/_30mdp"
                            android:src="@drawable/ic_plus"
                            app:layout_constraintBottom_toBottomOf="@+id/story"
                            app:layout_constraintEnd_toEndOf="@+id/story"
                            app:layout_constraintStart_toStartOf="@+id/story"
                            app:layout_constraintTop_toTopOf="@+id/story"
                            app:layout_constraintVertical_bias="0.3"
                            android:contentDescription="@string/todo" />

                        <TextView
                            android:id="@+id/textView11"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/Usman"
                            android:text="@string/create_a_story"
                            android:textColor="@color/white"
                            android:textSize="18sp"
                            app:layout_constraintEnd_toEndOf="@+id/addStory"
                            app:layout_constraintStart_toStartOf="@+id/addStory"
                            app:layout_constraintTop_toBottomOf="@+id/addStory" />


                    </androidx.constraintlayout.widget.ConstraintLayout>

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/storyRV"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="16dp"
                        android:layout_weight="1" />

                </LinearLayout>
            </HorizontalScrollView>

            <View
                android:id="@+id/view7"
                android:layout_width="wrap_content"
                android:layout_height="1dp"
                android:background="@color/derkGrey"

                app:layout_constraintTop_toBottomOf="@+id/horizontalScrollView"
                diagonal:layout_constraintEnd_toEndOf="parent"
                diagonal:layout_constraintHorizontal_bias="0.0"
                diagonal:layout_constraintStart_toStartOf="parent"
                tools:ignore="UnknownId" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/dashboardRV"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/view7" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>